k8s/10-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: taskops
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              volumeClaimTemplate:
                metadata:
                  name: pgdata
                spec:
                  accessModes: [ "ReadWriteOnce" ]
                  storageClassName: gp3
                  resources:
                    requests:
                      storage: 5Gi
