k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: taskops-ingress
  namespace: taskops
  annotations: 
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: taskops.example.com
      http: 
       paths: 
        - path: "/" 
          pathType: Prefix
          backend: 
            service:  
              name: frontend
              port:  
                number: 80
